<resources>

    <!-- Strings related to navbar -->
    <string name="app_name">MOOC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- Strings related to gustActivity -->
    <string name="login_text">Se connecter</string>
    <string name="signup_text">S\'inscrire</string>
    <string name="welcome_text">Accueil</string>
    <string name="large_text">"Material is the metaphor.\n\n"</string>


    <!-- Strings related to login -->
    <string name="prompt_first_name">Prénom</string>
    <string name="prompt_last_name">Nom</string>
    <string name="prompt_username">Pseudo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_parent">Parent</string>
    <string name="prompt_son">Élève</string>
    <string name="action_signup">créer</string>
    <string name="action_sign_in">Connexion</string>
    <string name="error_invalid_coordinates">Coordonnées erronées</string>
    <string name="error_invalid_email">L\'adresse email est invalide</string>
    <string name="error_invalid_password">Le mot de passe doit être composé au minimum de 7 caractères</string>
    <string name="error_empty_field">Ce champ est vide</string>


    <!-- Strings related to alertDialog -->
    <string name="alert_disconnect">Voulez vous vraiment déconnecter ?</string>
    <string name="alert_quit">Voulez vous vraiment quitter l\'application ?</string>
    <string name="alert_btn_pos">oui</string>
    <string name="alert_btn_neg">non</string>


    <!-- Strings related to errors from server -->
    <string name="L_SERVER_DOWN">Impossible de joindre le serveur</string>
    <string name="L_SERVER_ERROR">La requête que vous demandez ne peut être satisfaite</string>
    <string name="L_EMPTY_FIELD">Vous devez remplir tous les champs obligatoires</string>
    <string name="L_FORBIDDEN_ACTION">Vous n\'avez pas les droits pour faire l\'opération demandé</string>
    <string name="L_INVALID_EMAIL">@string/error_invalid_email</string>
    <string name="L_INVALID_FORM">Le formulaire n\'est pas valide. Si ce problème se reproduit, contactez un administrateur.</string>
    <string name="L_INVALID_LOGIN">Les identifiants sont invalides</string>
    <string name="L_INVALID_PASSWORD">@string/error_invalid_password</string>
    <string name="L_INVALID_USER_TYPE">Type d\'utilisateur invlaide</string>
    <string name="L_USER_ALREADY_EXIST">L\'utilisateur existe déjà</string>
    <string name="L_USER_NOT_EXIST">L\'utilisateur n\'existe pas</string>
    <string name="L_UNEXPECTED_ERROR">Une erreur inattendue s\'est produite. Si ce problème se reproduit, contactez un administrateur.</string>


    <!-- titles -->
    <string name="title_activity_parent_main">Espace parent</string>
    <string name="title_activity_child_main">Espace étudiant</string>
    <string name="title_activity_PDFViewer">PDFViewer</string>

    <!-- Strings related to sidebar menus -->
    <string name="menu_profile">Mon profil</string>
    <string name="menu_disconnect">Se déconnecter</string>

    <string name="menu_courses">Mes cours</string>
    <string name="menu_marks">Mes notes</string>
    <string name="menu_planning">Mon planning</string>
    <string name="menu_history">Mon historique</string>

    <string name="menu_children">Mes enfants</string>
    <string name="parent_fragment_children_infos_title">Clé d\'association</string>
    <string name="parent_fragment_children_infos_body">Demandez à votre enfant de se rendre sur son profil pour vous envoyer sa clé</string>
    <string name="parent_fragment_children_key">Clé</string>
    <string name="parent_fragment_children_add">Ajouter un nouvel enfant</string>
    <string name="parent_fragment_children_empty">Vous n\'avez aucun élève associé</string>
    <string name="parent_fragment_children_list">Vos enfants :</string>

    <!-- Strings related to content -->
    <string name="profile_title">Vos informations</string>
    <string name="profile_last_name">nom</string>
    <string name="profile_first_name">prénom</string>
    <string name="profile_email">email</string>
    <string name="profile_current_password">mot de passe actuel</string>
    <string name="profile_new_password">nouveau mot de passe</string>
    <string name="profile_new_password_confirmation">confirmer le mot de passe</string>
    <string name="profile_validate">Valider</string>
    <string name="profile_child_key">Votre clé d\'association</string>
    <string name="profile_child_key_desc">Vous devez fournir cette clé à votre parent afin qu\'il puisse associer sont compte au votre</string>
    <string name="profile_button_copy">Copier la clé</string>
    <string name="profile_button_copy_message">La clé a bien été copié</string>
    <string name="profile_share_title">Partage de la clé d\'association</string>

    <!-- Share listener -->
    <string name="share_via">Partager avec</string>

    <!-- Strings parent : child list -->
    <string name="parent_child_add_success">L\'enfant a été ajouté avec succès</string>

    <!--Strings related to course adapter-->
    <string name="child_course_adapter_teacher_details">détails prof</string>
    <string name="child_course_adapter_course_details">détails cours</string>

    <!--Strings related to lesson adapter-->
    <string name="child_lesson_adapter_read">lire</string>

    <!--Strings related to note adapter-->
    <string name="child_note_adapter_details">détails</string>

    <!--Strings related to Child marks fragment-->
    <string name="child_fragment_marks_your_marks">Vos Notes :</string>
    <string name="child_fragment_marks_empty">Vous n\'avez aucune note</string>

    <!--Strings related to Child history fragment-->
    <string name="child_fragment_history_your_history">Votre historique : </string>
    <string name="child_fragment_history_empty">Vous n\'avez aucun historique</string>
    <string name="title_activity_course_offer">CourseOfferActivity</string>

    <!--Strings related to parent history fragment-->
    <string name="parent_child_empty_history">cet enfant n\'a aucun historique</string>
    <string name="parent_child_last_connected">Dernière connexion :</string>
    <string name="L_READ_COURSE">lire un cours</string>

    <!--Strings related to Parent history fragment-->
    <string name="parent_child_add_course">inscrire à une matière</string>
    <string name="parent_child_history">historique</string>

    <!--Strings related to Parent Offer activity-->
    <string name="parent_offer_text">La liste des matières : </string>
    <string name="parent_offer_submit">Valider </string>
    <string name="L_SUBJECT_YEAR_NOT_EXIST">la matière demandé n\'éxiste pas</string>


</resources>
