<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/parent_nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile"
            android:checked="true"/>
        <item
            android:id="@+id/parent_nav_children"
            android:icon="@drawable/ic_menu_children"
            android:title="@string/menu_children" />
    </group>

    <group>
        <item
            android:id="@+id/parent_nav_disconnect"
            android:icon="@drawable/ic_menu_disconnect"
            android:title="@string/menu_disconnect" />
    </group>

</menu>
