<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Controllers.Guest.GuestMainActivity"
    tools:showIn="@layout/guest_activity_start">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_top_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="25dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/formText"
            android:layout_marginTop="@dimen/margin_input"
            android:layout_marginBottom="@dimen/margin_input">

            <AutoCompleteTextView
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textAutoComplete|textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/formText"
            android:layout_marginTop="@dimen/margin_input"
            android:layout_marginBottom="@dimen/margin_input">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_height="@dimen/button_height_default"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_input"
            android:text="@string/action_sign_in"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/textDefault"
            android:onClick="checkLogin"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>